clusters/cl01tl/manifests/librechat/HTTPRoute-librechat.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: librechat
  labels:
    app.kubernetes.io/instance: librechat
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: librechat
    helm.sh/chart: librechat-5.3.0
  namespace: librechat
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "ai.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: librechat-main
          namespace: librechat
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
